--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -27,6 +27,8 @@ on init
     symlink /dev/pn544 /dev/pn54x
     chown nfc nfc /dev/pn54x
 
+    export LD_PRELOAD /system/lib/libboringssl-compat.so
+
 on post-fs-data
     # Torch
     chown system camera /sys/class/leds/torch-light/brightness
