--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -34,7 +34,9 @@ on init
 on early-boot
     # set RLIMIT_MEMLOCK to 64MB
     setrlimit 8 67108864 67108864
-    write /sys/kernel/boot_adsp/boot 1
+
+    # Busy loop to wait for devices booted by devstart_sh just in case device not ready
+    exec - root root system -- /system/etc/init.qcom.devwait.sh
 
 on fs
     mount_all ./fstab.bacon
@@ -177,6 +179,10 @@ on boot
     # NFC: Use HAL compatible node
     symlink /dev/pn544 /dev/pn54x
     chown nfc nfc /dev/pn54x
+
+on post-fs
+    # Start devices by sysfs trigger
+    start devstart_sh
 
 on post-fs-data
     mkdir /data/media 0770 media_rw media_rw
@@ -356,6 +362,13 @@ service qseecomd /system/vendor/bin/qseecomd
     class core
     user root
     group root
+
+service devstart_sh /system/etc/init.qcom.devstart.sh
+    class main
+    user root
+    group root system
+    disabled
+    oneshot
 
 service charger /charger
     class charger
