--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -41,7 +41,9 @@ on init
 on early-boot
     # Set RLIMIT_MEMLOCK to 64MB
     setrlimit 8 67108864 67108864
-    write /sys/kernel/boot_adsp/boot 1
+
+    # Busy loop to wait for devices booted by devstart_sh just in case device not ready
+    exec - root root system -- /system/vendor/bin/init.qcom.devwait.sh
 
 on boot
     # bluetooth
@@ -173,6 +175,10 @@ on boot
 
     # Wifi firmware reload path
     chown wifi wifi /sys/module/wlan/parameters/fwpath
+
+on post-fs
+    # Start devices by sysfs trigger
+    start devstart_sh
 
 on post-fs-data
     mkdir /data/media 0770 media_rw media_rw
@@ -364,6 +370,13 @@ service qseecomd /system/vendor/bin/qseecomd
     class core
     user root
     group root
+
+service devstart_sh /system/vendor/bin/init.qcom.devstart.sh
+    class main
+    user root
+    group root system
+    disabled
+    oneshot
 
 service charger /charger
     class charger
