bacon: init: Use pn54x for NFC
- The kernel driver uses /dev/pn544 while the HAL looks for
  /dev/pn54x
- Symlink to solve the issue

Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>

--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -23,6 +23,9 @@ on init
     # Support legacy paths
     symlink /sdcard /storage/sdcard0
 
+    # NFC: Use HAL compatible node
+    symlink /dev/pn544 /dev/pn54x
+
 on post-fs-data
     # Torch
     chown system camera /sys/class/leds/torch-light/brightness
