--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -335,7 +335,8 @@ on post-fs-data
 service rmt_storage /system/vendor/bin/rmt_storage
     class core
     user root
-    group system
+    group system wakelock
+    shutdown critical
 
 service rfs_access /system/vendor/bin/rfs_access
     class core
