bacon: init: Change owner for NFC symlink
- When toggling NFC, the device logs:

  E NxpTml  : _i2c_write() errno : 5
  E NxpTml  : PN54X - Error in I2C Write.....
  E NxpHal  : write error status = 0x1ff
  E NxpHal  : write_unlocked failed - PN54X Maybe in Standby Mode - Retry
- On further investigation, the symlink /dev/pn54x is owned by root
- Running the following fixes NFC:
  adb root
  adb shell chown -h nfc:nfc /dev/pn54x
- chown the symlink during init

Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>

--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -25,6 +25,7 @@ on init
 
     # NFC: Use HAL compatible node
     symlink /dev/pn544 /dev/pn54x
+    chown nfc nfc /dev/pn54x
 
 on post-fs-data
     # Torch
