bacon: init: Enable early boot animation start
 * Split our fstab into two stages: early and late mount.
 * Start bootanimation and graphics before /data and /cache mounting

Author: Nolen Johnson <johnsonnolen@gmail.com>
Date:   Wed Jun 13 09:21:39 2018 -0400

    fstab: don't latemount cache partition

    * This caused numerous issues. The biggest of which being that /cache's
      block device was labeled incorrectly as it was latemounted. Due to
      this, Lineage Updater would fail to write to /cache directories for
      updates, causing them to fail.

    * Lesson learned, several optimizations Google included on the Pixel's
      won't work/aren't feasible on non-A/B devices.

Change-Id: I42f8bb460db80e86616c92b11752242c086b4aec

--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -176,6 +176,35 @@ on boot
     # Wifi firmware reload path
     chown wifi wifi /sys/module/wlan/parameters/fwpath
 
+on fs
+    mount_all /fstab.bacon --early
+
+    mkdir /dev/usb-ffs 0770 shell shell
+    mkdir /dev/usb-ffs/adb 0770 shell shell
+    mount functionfs adb /dev/usb-ffs/adb uid=2000,gid=2000
+    write /sys/class/android_usb/android0/f_ffs/aliases adb
+    setprop sys.usb.ffs.aio_compat 1
+
+    mkdir /dev/bus 0755 root root
+    mkdir /dev/bus/usb 0755 root root
+
+    restorecon_recursive /persist
+    mkdir /persist/data 0700 system system
+    mkdir /persist/data/sfs 0700 system system
+    mkdir /persist/data/tz 0700 system system
+
+    # Start HW service manager early
+    start hwservicemanager
+
+on late-fs
+    # Start services for bootanim
+    start surfaceflinger
+    start bootanim
+    start configstore-hal-1-0
+    start gralloc-2-0
+
+    mount_all /fstab.bacon --late
+
 on post-fs
     # Start devices by sysfs trigger
     start devstart_sh
@@ -289,23 +318,6 @@ on post-fs-data
     # Torch
     chown system camera /sys/class/leds/torch-light/brightness
     chmod 0660 /sys/class/leds/torch-light/brightness
-
-on fs
-    mount_all ./fstab.bacon
-
-    mkdir /dev/usb-ffs 0770 shell shell
-    mkdir /dev/usb-ffs/adb 0770 shell shell
-    mount functionfs adb /dev/usb-ffs/adb uid=2000,gid=2000
-    write /sys/class/android_usb/android0/f_ffs/aliases adb
-    setprop sys.usb.ffs.aio_compat 1
-
-    mkdir /dev/bus 0755 root root
-    mkdir /dev/bus/usb 0755 root root
-
-    restorecon_recursive   /persist
-    mkdir /persist/data 0700 system system
-    mkdir /persist/data/sfs 0700 system system
-    mkdir /persist/data/tz 0700 system system
 
 service rmt_storage /system/vendor/bin/rmt_storage
     class core
