--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -209,6 +209,9 @@ on post-fs
     # Start devices by sysfs trigger
     start devstart_sh
 
+    # Allow writing to the kernel trace log.
+    chmod 0222 /sys/kernel/debug/tracing/trace_marker
+
 on post-fs-data
     mkdir /data/media 0770 media_rw media_rw
 
