bacon: init: Ensure .bt_nv.bin is owned by bluetooth
* This file is used by hciattach when turning on bluetooth,
  and without correct permissions, MAC address will be wrong.

Change-Id: Ie700a4be1a6b83932a9cffac45cd63f179f3edda

--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -225,8 +225,11 @@ on post-fs-data
     # Create directory for TZ Apps
     mkdir /data/misc/qsee 0770 system system
 
-    # bluetooth
+    # Create directory for bluetooth
     mkdir /data/misc/bluetooth 0770 bluetooth bluetooth
+
+    # Ensure .bt_nv.bin is owned by bluetooth
+    chown bluetooth bluetooth /persist/.bt_nv.bin
 
     # Create directory used by audio subsystem
     mkdir /data/misc/audio 0770 audio audio
