bacon: audio: Fix USB audio support
fw/b changes in Oreo cause some USB audio devices
which were previously recognized as AUDIO_DEVICE_OUT_USB_DEVICE
or AUDIO_DEVICE_OUT_USB_ACCESSORY now to be recognized as
AUDIO_DEVICE_OUT_USB_HEADSET (0x4000000), causing this error:

AudioPolicyManagerCustom: setDeviceConnectionState() could not find HW module for device 04000000

BUGBASH-2398

Change-Id: If1f6c760e28a2daeb3855c86fc561c7e5e85f0bf
(cherry picked from commit 060b131c20914770ac71cb83ebc87a2e0d120087)

--- a/audio/audio_policy.conf
+++ b/audio/audio_policy.conf
@@ -87,7 +87,7 @@ audio_hw_modules {
         sampling_rates dynamic
         channel_masks dynamic
         formats dynamic
-        devices AUDIO_DEVICE_OUT_USB_DEVICE
+        devices AUDIO_DEVICE_OUT_USB_DEVICE|AUDIO_DEVICE_OUT_USB_HEADSET
       }
     }
     inputs {
@@ -95,7 +95,7 @@ audio_hw_modules {
         sampling_rates dynamic
         channel_masks dynamic
         formats dynamic
-        devices AUDIO_DEVICE_IN_USB_DEVICE
+        devices AUDIO_DEVICE_IN_USB_DEVICE|AUDIO_DEVICE_IN_USB_HEADSET
       }
     }
   }
