bacon: rootdir: Update SELinux context for charger
* Fixes most denials in charger-only mode

Change-Id: Ie92766b533d0c746be6cca420e046634b0518df6

--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -407,7 +407,7 @@ service devstart_sh /system/etc/init.qcom.devstart.sh
 service charger /charger
     class charger
     critical
-    seclabel u:r:charger:s0
+    seclabel u:r:healthd:s0
 
 service hvdcp /system/bin/hvdcp
     class core
