bacon: rootdir: Set vendor.post_boot.parsed before starting mpdecision
* Allows mpdecision to work properly on boot to restore selected power profile

Change-Id: Ib92f971f28ed875481170b056ac16aad05aadcfc

--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -108,4 +108,5 @@ on property:dev.bootcomplete=1
     rm /data/system/perfd/default_values
     setprop sys.post_boot.parsed 1
     setprop sys.io.scheduler "bfq"
+    setprop vendor.post_boot.parsed 1
     start mpdecision
